[package]
name = "duid-data-grid"
version = "0.1.0"
edition = "2021"


[dependencies]
duid-canvas = { version = "0.1", path = "duid-canvas" }
duid = { version = "0.2", git = "https://github.com/djedou/duid" , branch = "feat/dom_without_patches" }

[workspace]
members = [
    "duid-canvas"
]

exclude = [
    "excel_app_example"
]
